remove reference to javax.xml.bind.DatatypeConverter/sun.misc (because of removal in jdk11)