@@ -46,6 +46,7 @@ import ch.interlis.iom_j.itf.EnumCodeMapper;
 import ch.interlis.iox_j.wkb.Iox2wkb;
 import ch.interlis.iox_j.wkb.Iox2wkbException;
 import ch.interlis.iox_j.wkb.Wkb2iox;
+import net.iharder.Base64;
 
 public class MysqlColumnConverter extends AbstractWKBColumnConverter {
     private TransferDescription td=null;
@@ -156,7 +157,7 @@ public class MysqlColumnConverter extends AbstractWKBColumnConverter {
 
 	    byte[] bytearray;
 		try {
-			bytearray = new sun.misc.BASE64Decoder().decodeBuffer(blob);
+			bytearray = Base64.decode(blob);
 		} catch (IOException e) {
 			throw new ConverterException(e);
 		}
@@ -343,7 +344,7 @@ public class MysqlColumnConverter extends AbstractWKBColumnConverter {
 		@Override
 		public String toIomBlob(Object obj) throws java.sql.SQLException,
 				ConverterException {
-		    String s = new sun.misc.BASE64Encoder().encode((byte[])obj);
+		    String s = Base64.encodeBytes((byte[])obj);
 		    return s;
 		}
 
